- Collected DCI data recalculation based on stored raw values and current transformation settings
- Fixed issues:
	NX-900 (Server started during nxdbmgr check forced repair)
	NX-1102 (Implement event groups)
	NX-1199 (SNMP credentials per-zone)
	NX-1219 (Add 'created' and 'last login' columns to User Manager)
	NX-1332 (Execution timeout for external parameter provider)


*
* 2.2.2
*

- Fixed issues:
	NX-669 (Fixed regexp for DRBD parsing in Linux subagent)
	NX-1366 (Edit option for "group box" decorations on network maps)


*
* 2.2.1
*

- Implemented separate access rights for each DCI object
- Option to read log files using VSS snapshots on Windows
- Per stage confirmation in database manager during database check
- Fixed file download cancelation
- HTTPS support in SMSEagle driver
- New network map element - text box
- New debug log format with tags
- Ability to set debug level per tag or tag mask
- Improved audit logging on object creation
- NXSL function "GeoLocation" replaced with "GeoLocation" class constructor
- Optimized object updates in database (to reduce load on database in large installations)
- Thread pool used for data collection instead of fixed number of poller threads
- Optimized data collection from agents
- Configurable number of records per transaction for writing DCI data
- Fixed issues: 
	NX-662 (New network map element - text box)
	NX-703 (Export/Import actions)
	NX-757 (Instance discovery - grace period for removed instances before deleting DCIs)
	NX-801 (Deleted nodes not removed from trusted nodes lists of other objects)
	NX-1045 (Add rack/chassis diagram as dashboard element)
	NX-1142 (Back view for racks)
	NX-1201 (Discovered node links on map should automatically be set to color based on the status of the interfaces shown in connector names)
	NX-1252 (Fix automatically generated transformation scripts for 64 bit interface counters)
	NX-1268 (Do DNS resolve for node names via zone proxy)