@@ -17,9 +17,11 @@
 * 2.2.2
 *
 
+- Server command line tools working with agents (nxaction, nxap, nxget, nxupload) use encryption by default
 - Fixed issues:
 	NX-669 (Fixed regexp for DRBD parsing in Linux subagent)
 	NX-1366 (Edit option for "group box" decorations on network maps)
+	NX-1373 (Error message "Error loading RSA keys from ..." in all server-to-agent command line tools)
 
 
 *
